# remi-agentloop

./: .gitignore  ACP-README.md  ACP-SUMMARY.md  Cargo.toml  DESIGN.md  README.md  test-memory.json
.deepagent/skills/: create-rust-hello-world.md
docs/: 01-core-trait.md  02-protocol.md  03-type-system.md  04-adapters.md  05-model-layer.md  06-tool-system.md  07-agent-loop.md  08-transport.md  09-examples.md  10-roadmap.md  11-identifiers-context.md  12-config.md  13-tracing.md  14-advanced-patterns.md  15-tool-macro-builtins.md  16-tui.md  17-benchmarking.md  17-sub-agent-sub-session.md  18-current-changelog.md  19-dynamic-agent.md  acp-implementation-summary.md  acp-protocol.md
examples/: README-ACP.md
examples/acp-http-client/: Cargo.toml
examples/acp-http-client/src/: main.rs
examples/acp-http-server/: Cargo.toml
examples/acp-http-server/src/: main.rs
examples/acp-multi-agent/: Cargo.toml
examples/acp-multi-agent/src/: main.rs
examples/acp-simple/: Cargo.toml
examples/acp-simple/src/: main.rs
examples/composable-calculator-agent/: Cargo.toml
examples/composable-calculator-agent/src/: lib.rs
examples/composable-calculator-browser/: Cargo.toml  index.html  serve.py
examples/composable-calculator-browser/src/: lib.rs
examples/composable-calculator-wasip2/: Cargo.toml
examples/composable-calculator-wasip2/src/: lib.rs
examples/wasm-benchmark-guest/: Cargo.toml
examples/wasm-benchmark-guest/src/: lib.rs
examples/wasm-calculator-guest/: Cargo.toml  calculator.wasm
examples/wasm-calculator-guest/src/: lib.rs
examples/wasm-llm-calculator-guest/: Cargo.toml  llm_calculator.wasm
examples/wasm-llm-calculator-guest/src/: lib.rs
mcp-server/: CLIENT-FEATURES.md  Cargo.toml  FEATURES.md  README.md
mcp-server/examples/: advanced_client.rs  mcp_cli.rs  simple_client.rs  simple_server.rs
mcp-server/src/: client.rs  lib.rs  protocol.rs  server.rs
remi-agentloop/: Cargo.toml
remi-agentloop-cli/: Cargo.toml  build.rs
remi-agentloop-cli/dist-ui/: index.html
remi-agentloop-cli/dist-ui/assets/: index-CBvh6JB1.css
remi-agentloop-cli/src/: dev.rs  main.rs  templates.rs  ui.rs
remi-agentloop-cli/ui/: tailwind.config.js  vite.config.ts
remi-agentloop-cli/ui/src/: store.tsx  types.ts
remi-agentloop-cli/ui/src/components/: ChatPane.tsx
remi-agentloop-cli/ui/src/hooks/: useChat.ts  useSettings.ts  useStatus.ts
remi-agentloop-core/: Cargo.toml
remi-agentloop-core/examples/: mock_model_benchmark.rs
remi-agentloop-core/src/: agent.rs  agent_loop.rs  builder.rs  checkpoint.rs  config.rs  context.rs  error.rs  interrupt.rs  lib.rs  model.rs  protocol.rs  state.rs  types.rs
remi-agentloop-core/src/adapters/: boxed.rs  logging.rs  map.rs  retry.rs  tracing_layer.rs
remi-agentloop-core/src/tool/: external.rs  mod.rs  registry.rs
remi-agentloop-core/src/tracing/: langsmith.rs  mod.rs  stdout.rs
remi-agentloop-core/tests/: external_tool_layer.rs  replay_export.rs  sub_session_calculator.rs  tool_extra_prompt.rs
remi-agentloop-deepagent/: Cargo.toml
remi-agentloop-deepagent/examples/: deep_agent_cli.rs
remi-agentloop-deepagent/src/: agent.rs  config_file.rs  events.rs  lib.rs  search.rs  sub_agent.rs  workspace_fs.rs
remi-agentloop-deepagent/src/compress/: mod.rs
remi-agentloop-deepagent/src/registry/: mod.rs
remi-agentloop-deepagent/src/skill/: mod.rs  store.rs  tools.rs
remi-agentloop-deepagent/src/task/: mod.rs
remi-agentloop-eval/: Cargo.toml
remi-agentloop-eval/src/: capture.rs  error.rs  lib.rs  report.rs  runner.rs  variant.rs
remi-agentloop-guest/: Cargo.toml
remi-agentloop-guest/src/: lib.rs  types.rs
remi-agentloop-macros/src/: lib.rs
remi-agentloop-model/: Cargo.toml
remi-agentloop-model/src/: openai.rs
remi-agentloop-tool/: Cargo.toml
remi-agentloop-tool/src/: bash.rs  bashkit.rs  bkfs.rs  fs.rs  lib.rs  vfs.rs
remi-agentloop-transport/: Cargo.toml
remi-agentloop-transport/src/: acp.rs  http_client.rs  http_server.rs  lib.rs  sse.rs
remi-agentloop-wasm/: Cargo.toml
remi-agentloop-wasm/examples/: wasm_calculator.rs  wasm_calculator_layered.rs  wasm_component_benchmark.rs  wasm_composable_calculator.rs
remi-agentloop-wasm/src/: http_host.rs  lib.rs
remi-agentloop/examples/: calculator_agent.rs  calculator_sse_client.rs  calculator_sse_server.rs  composable_calculator.rs  multimodal_image.rs  step_external_tools.rs  tool_patterns.rs
remi-agentloop/src/: agent.rs  agent_loop.rs  builder.rs  config.rs  context.rs  error.rs  interrupt.rs  lib.rs  protocol.rs  state.rs  types.rs  union.rs
remi-agentloop/src/adapters/: boxed.rs  logging.rs  mod.rs  tracing_layer.rs
remi-agentloop/src/model/: mod.rs  openai.rs
remi-agentloop/src/tool/: bash.rs  fs.rs  mod.rs  registry.rs  vfs.rs
remi-agentloop/src/tracing/: mod.rs
remi-agentloop/src/transport/: http_client.rs  http_server.rs  mod.rs  sse.rs
remi-agentloop/tests/: tool_macro_schemars.rs
remi-cli/: Cargo.toml  build.rs
remi-cli/dist-ui/assets/: index-HOBabu-T.js
remi-cli/src/: main.rs  templates.rs  ui.rs
remi-cli/ui/: index.html  package-lock.json  package.json
remi-cli/ui/src/: App.tsx  index.css
remi-cli/ui/src/components/: BuildBadge.tsx  EventTimeline.tsx  MessageBubble.tsx  SettingsModal.tsx  Sidebar.tsx
remi-core/: Cargo.toml
remi-core/src/: agent.rs  agent_loop.rs  builder.rs  checkpoint.rs  context.rs  error.rs  lib.rs  model.rs  protocol.rs  state.rs  types.rs
remi-deepagent/: Cargo.toml
remi-deepagent/examples/: deep_agent_cli.rs
remi-deepagent/src/: agent.rs  config_file.rs  events.rs  lib.rs  search.rs  workspace_fs.rs
remi-deepagent/src/compress/: mod.rs
remi-deepagent/src/registry/: mod.rs
remi-deepagent/src/skill/: mod.rs  store.rs  tools.rs
remi-deepagent/src/task/: mod.rs
remi-deepagent/src/todo/: mod.rs  tools.rs
remi-model/: Cargo.toml
remi-model/src/: lib.rs  openai.rs
remi-tool/: Cargo.toml
remi-tool/src/: bash.rs  bashkit.rs  bkfs.rs  fs.rs  lib.rs  vfs.rs
remi-transport/: Cargo.toml
remi-transport/src/: http_client.rs  http_server.rs  lib.rs  sse.rs
wit/: world.wit
(+11 files in other folders)
