[workspace]
members = [
    "remi-core",
    "remi-transport",
    "remi-model",
    "remi-tool",
    "remi-agentloop",
    "remi-agentloop-macros",
    "remi-agentloop-guest",
    "remi-agentloop-wasm",
    "remi-cli",
]
exclude = [
    "examples/wasm-calculator-guest",
    "examples/wasm-llm-calculator-guest",
    "examples/composable-calculator-agent",
    "examples/composable-calculator-wasip2",
    "examples/composable-calculator-browser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/another-s347/remi-agentloop"

[workspace.dependencies]
# Async
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP (optional)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
axum = { version = "0.7", features = ["json"] }
tokio-util = { version = "0.7" }

# Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-time = "1"

# Proc-macro deps
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# TUI
ratatui = { version = "0.26" }
crossterm = { version = "0.27", features = ["event-stream"] }

# Encoding
base64 = "0.22"

# WASM
wit-bindgen = "0.53"
wasmtime = { version = "42", default-features = false, features = [
    "component-model",
    "cranelift",
    "async",
] }
wasmtime-wasi = "42"
