[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) server and client implementation"

[features]
default = ["server"]
server = ["axum", "tokio/full"]
client = ["reqwest", "tokio/full"]

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# Server dependencies
axum = { version = "0.7", optional = true }

# Client dependencies
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream"] }

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
