[package]
name = "remi-agentloop-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM component runner for remi-agentloop — loads .wasm agents and exposes them as Agent"

[features]
default = ["http-host"]
http-host = ["reqwest"]

[dependencies]
remi-agentloop = { path = "../remi-agentloop", default-features = false }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["rustls-tls"] }

[[example]]
name = "wasm_calculator"

[[example]]
name = "wasm_calculator_layered"

[[example]]
name = "wasm_composable_calculator"
required-features = ["http-host"]
