[package]
name = "remi-deepagent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deep agent with todo, skill, context-compression, file-backed registry, and sub-agent task delegation"

[features]
default = ["native"]
native = ["remi-core/native", "tokio/full", "dep:reqwest"]
tui = [
    "native",
    "dep:ratatui",
    "dep:crossterm",
    "dep:remi-transport",
    "remi-model/http-client",
    "remi-transport/http-client",
]

[dependencies]
remi-core = { path = "../remi-core" }
remi-tool = { path = "../remi-tool", features = ["tool-bash", "tool-fs"] }
remi-model = { path = "../remi-model" }
remi-transport = { path = "../remi-transport", optional = true }

futures = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["rustls-tls"], optional = true }

[dev-dependencies]
remi-model = { path = "../remi-model", features = ["http-client"] }
remi-transport = { path = "../remi-transport", features = ["http-client"] }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "deep_agent_cli"
required-features = ["native"]

[[bin]]
name = "deep-agent"
path = "src/bin/deep_agent_tui.rs"
required-features = ["tui"]
