[package]
name = "acp-multi-agent"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
remi-agentloop-transport = { path = "../../remi-agentloop-transport", features = ["http-client", "http-server"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
