[package]
name = "composable-calculator-wasip2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
composable-calculator-agent = { path = "../composable-calculator-agent" }
remi-agentloop = { path = "../../remi-agentloop", default-features = false }
wit-bindgen = "0.53"
futures = "0.3"
async-stream = "0.3"
serde_json = "1"
