[package]
name = "wasm-llm-calculator-guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
remi-agentloop-guest = { path = "../../remi-agentloop-guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Sync HTTP client designed specifically for WASM components (wasi:http).
# On wasm32-wasip2: drives wasi:http/outgoing-handler directly.
# jco polyfills it with browser fetch; wasmtime uses wasmtime-wasi-http.
waki = "0.5"
# wit-bindgen must be a direct dep so the export_agent! macro can reference it
wit-bindgen = "0.53"
